# Spot-Distributed-LLM-Training

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.githooks/: pre-commit
data/openwebtext_300m/: prepare.py
docs/: gpt2-reproduction.md  multinode-design.md  nanochat-plan.md  orchestrator-experiments.md  scaling-experiment.md
docs/iam/: README.md  controller-policy.json  orchestrator-policy.json  setup-policy.json  worker-policy.json
loadgen/: main.go
scripts/: box-validate.sh
src/inference/: __init__.py  registry.py  router.py  service.py  worker.py
src/orchestrator/: __init__.py  __main__.py  aws.py  bake.py  bootstrap.py  compare.py  config.py  dataset.py  experiments.py  fleet.py  fleet_preempt.py  logview.py  monitor.py  profile.py  remote.py  setup.py  sidecar.py  supervisor.py
src/spot_train/: __init__.py  checkpoint.py  config.py  data.py  distributed.py  events.py  interruption.py  rng.py  s3_store.py  sampling.py  train.py
tests/: conftest.py  elastic_launcher.py  elastic_worker.py  test_amp.py  test_async_checkpoint.py  test_bootstrap.py  test_checkpoint_disk.py  test_compare.py  test_cost.py  test_data.py  test_ddp.py  test_elastic.py  test_elastic_e2e.py  test_epoch_e2e.py  test_events.py  test_fleet_monitor.py  test_fleet_preempt.py  test_fleet_registry.py  test_fleet_router.py  test_fleet_worker_api.py  test_kill_resume.py  test_logview.py  test_overfit_experiment.py  test_profile.py  test_remote.py  test_sampling.py  test_scaling_experiment.py  test_sidecar.py  test_supervisor.py
