[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-train"
version = "0.0.1"
description = "Fault-tolerant LLM training on spot instances (AWS, then heterogeneous AWS + RunPod)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Miguel Enlle" }]
dependencies = [
    "torch>=2.2",
    "numpy",
    "boto3",          # S3 checkpoint store + IMDS
    "requests",       # IMDS spot-action polling
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
spot-train = "spot_train.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
# nanoGPT is upstream, read-only — never lint or format it.
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
